Add application component and view stylesheets

--- a/app/views/components/_option-select.html.erb
+++ b/app/views/components/_option-select.html.erb
@@ -1,3 +1,4 @@
+<% add_app_component_stylesheet("option-select") %>
 <%
   title_id = "option-select-title-#{title.parameterize}"
   checkboxes_id = "checkboxes-#{SecureRandom.hex(4)}"
