--- a/app/views/search/_search_field.html.erb
+++ b/app/views/search/_search_field.html.erb
@@ -1,3 +1,4 @@
+<% add_view_stylesheet("search") %>
 <% label_text = capture do %>
 <%= render "govuk_publishing_components/components/heading", {
   text: "Search GOV.UK",
