--- a/app/assets/stylesheets/components/_expander.scss
+++ b/app/assets/stylesheets/components/_expander.scss
@@ -1,3 +1,5 @@
+@import "govuk_publishing_components/individual_component_support";
+
 .app-c-expander {
   padding: 0 0 govuk-spacing(2);
   margin-bottom: govuk-spacing(2);
