--- a/app/views/finders/_filter_button.html.erb
+++ b/app/views/finders/_filter_button.html.erb
@@ -1,3 +1,4 @@
+<% add_app_component_stylesheet("mobile-filters") %>
 <button class="app-c-button-as-link app-mobile-filters-link js-toggle-mobile-filters"
   data-toggle="mobile-filters-modal"
   data-target="facet-wrapper"
