Fix styling issues with the select component
- Include the select component stylesheet manually, since the `gem-c-select` is currently hardcoded in the view template, the stylesheet is not automatically included
- Nested the style rules for `sort-options__label` and `sort-options__select` within `sort-options`. This was done to
 fix styling issues by increasing the CSS specificity to override values set in `.govuk-label`

--- a/app/assets/stylesheets/finder_frontend.scss
+++ b/app/assets/stylesheets/finder_frontend.scss
@@ -266,19 +266,21 @@ mark {
   @include govuk-responsive-margin(4, "bottom");
 }
 
-.sort-options__label {
-  @include govuk-responsive-padding(1, "right");
-  display: inline-block;
-  margin-bottom: govuk-spacing(3);
+.sort-options {
+  .sort-options__label {
+    @include govuk-responsive-padding(1, "right");
+    display: inline-block;
+    margin-bottom: govuk-spacing(3);
 
-  @include govuk-media-query($from: tablet) {
-    font-size: 16px;
+    @include govuk-media-query($from: tablet) {
+      font-size: 16px;
+    }
   }
-}
 
-.sort-options__select {
-  @include govuk-media-query($from: tablet) {
-    font-size: 16px;
+  .sort-options__select {
+    @include govuk-media-query($from: tablet) {
+      font-size: 16px;
+    }
   }
 }
 
