Ensure checkbox labels always have margin-bottom 0

--- a/app/assets/stylesheets/finder_frontend.scss
+++ b/app/assets/stylesheets/finder_frontend.scss
@@ -261,6 +261,10 @@ mark {
     color: govuk-colour("black");
   }
 
+  .govuk-checkboxes__label {
+    margin-bottom: 0;
+  }
+
   .gem-c-intervention {
     margin-bottom: 0;
   }
