Fix option-select component rendering issue
When the partial is cached, the helper methods called to add the stylesheets are not called. By calling the methods before caching is enabled, we ensure that the stylesheets are always requested.

--- a/app/views/finders/_option_select_facet.html.erb
+++ b/app/views/finders/_option_select_facet.html.erb
@@ -1,3 +1,6 @@
+<% add_app_component_stylesheet("option-select") %>
+<% add_gem_component_stylesheet("checkboxes") %>
+
 <% cache_if option_select_facet.cacheable?, option_select_facet.cache_key do %>
   <%= render partial: 'components/option-select', locals: {
     :key => option_select_facet.key,
