Add data-ga4-change-category and Ga4FinderTracker call to finders
This allows us to track "change" events on the Finders, so that we can push GA4 events when the keyword or filters change.

We add data-ga4-section so that we know the element is a filter section. This also gives us the title of the section for our GA4 object. We add data-ga4-filter-container so that our JS knows where to hook into to setthe indexes. It will loop through the data-ga4-section elements within this container to set the indexes. We initialise the setFilterIndexes function when the search page loads.

--- a/app/views/finders/_facet_collection.html.erb
+++ b/app/views/finders/_facet_collection.html.erb
@@ -7,7 +7,7 @@
     <% end %>
   <% end %>
   <% if !content_item.all_content_finder? %>
-    <div id="keywords" role="search" aria-label="<%= content_item.title %>">
+    <div id="keywords" role="search" aria-label="<%= content_item.title %>" data-ga4-change-category="update-keyword text">
       <% label_text = capture do %>
         Search <span class="govuk-visually-hidden"><%= content_item.title %></span>
       <% end %>
@@ -45,7 +45,7 @@
             } %>
           </div>
         </div>
-        <div class="facets__content">
+        <div class="facets__content" data-ga4-filter-container>
           <%= render facets.select(&:filterable?) %>
           <div class="facets__tags-block js-mobile-facet-tag-block"  data-module="remove-filter">
             <%= render "facet_tags", facet_tags.present %>
