--- a/app/views/finders/_radio_facet.html.erb
+++ b/app/views/finders/_radio_facet.html.erb
@@ -1,4 +1,4 @@
-<div class="facet-container">
+<div class="facet-container" data-ga4-change-category="update-filter radio" data-ga4-section="">
   <%= render "govuk_publishing_components/components/radio", {
     name: radio_facet.key,
     small: true,
