--- a/app/views/finders/_show_header.html.erb
+++ b/app/views/finders/_show_header.html.erb
@@ -22,7 +22,7 @@
         font_size: "xl",
         margin_bottom: 4
         } %>
-        <div id="keywords" class="app-patch--search-input-override" role="search" aria-label="Sitewide">
+        <div id="keywords" class="app-patch--search-input-override" role="search" aria-label="Sitewide" data-ga4-change-category="update-keyword text">
           <%= render "govuk_publishing_components/components/search", {
             aria_controls: "js-search-results-info",
             id: "finder-keyword-search",
