--- a/app/views/finders/_date_facet.html.erb
+++ b/app/views/finders/_date_facet.html.erb
@@ -1,6 +1,5 @@
-
 <%=
-render "components/date-filter", {
+render "components/date_filter", {
   name: date_facet.name,
   key: date_facet.key,
   from_value: date_facet.user_supplied_from_date,
