Update column class for subscription_links
This will ensure that the component sits within the main container

--- a/app/views/finders/show.html.erb
+++ b/app/views/finders/show.html.erb
@@ -74,7 +74,7 @@
               </div>
             </div>
 
-            <div class="govuk-grid-column-half govuk-!-text-align-right subscription-links subscription-links--desktop">
+            <div class="govuk-grid-column-one-half govuk-!-text-align-right subscription-links subscription-links--desktop">
               <%= render "govuk_publishing_components/components/subscription_links", signup_links %>
             </div>
           </div>
