Temporary change to open filter on licence finder pages

--- a/app/views/finders/_filter_button.html.erb
+++ b/app/views/finders/_filter_button.html.erb
@@ -8,6 +8,7 @@
     data-track-label=""
     data-module="ga4-event-tracker"
     data-ga4-expandable=""
+    data-document-noun="<%= @content_item.document_noun %>"
     >
       Filter <span class="govuk-visually-hidden"> results</span>
       <span class="js-selected-filter-count"><%= sanitize facet_tags.display_total_selected_filters %></span>
