--- a/app/assets/stylesheets/components/_mobile-filters.scss
+++ b/app/assets/stylesheets/components/_mobile-filters.scss
@@ -1,5 +1,9 @@
 @import "govuk_publishing_components/individual_component_support";
 
+.app-c-mobile-filters {
+  position: relative;
+}
+
 .app-mobile-filters-link {
   display: none;
 
