--- a/app/views/finders/_show_header.html.erb
+++ b/app/views/finders/_show_header.html.erb
@@ -26,7 +26,7 @@
     <div class="govuk-grid-column-two-thirds">
       <% if content_item.all_content_finder? %>
       <%= render "govuk_publishing_components/components/heading", {
-        text: sanitize("Search <span class='govuk-visually-hidden'>all content</span>"),
+        text: sanitize("Search <span class='govuk-visually-hidden app-visually-hidden'>all content</span>"),
         heading_level: 1,
         font_size: "xl",
         margin_bottom: 4
