Add survey link to find-licences specialist finder
Adds the intervention component to the find-licences specialist finder. The intervention component is used to help gather feedback from users following the launch of the tool.

--- a/app/views/finders/_show_header.html.erb
+++ b/app/views/finders/_show_header.html.erb
@@ -13,6 +13,14 @@
     <%= render 'govuk_publishing_components/components/contextual_breadcrumbs', content_item: content_item.as_hash, inverse: inverse, ga4_tracking: true %>
   <% end %>
 
+  <% if content_item.base_path == "/find-licences"%>
+    <div class="govuk-!-margin-top-5">
+      <%= render "govuk_publishing_components/components/intervention", {
+        suggestion_text: sanitize("This is a new tool. Your <a href='https://surveys.publishing.service.gov.uk/s/1AXTLB' class='govuk-link'>feedback</a> will help us to improve it."),
+      } %>
+    </div>
+  <% end %>
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <% if content_item.all_content_finder? %>
