Amend label if `label_text` property provided

--- a/app/views/finders/_facet_collection.html.erb
+++ b/app/views/finders/_facet_collection.html.erb
@@ -11,7 +11,7 @@
         type: 'search',
         value: result_set_presenter.user_supplied_keywords,
         inline_label: false,
-        label_text: label_text
+        label_text: sanitize(content_item.label_text) || label_text
       } %>
     </div>
   <% end %>
