--- a/app/views/finders/show.html.erb
+++ b/app/views/finders/show.html.erb
@@ -4,7 +4,9 @@
   <% content_for :title, content_item.title %>
 <% end %>
 <% content_for :head do %>
-  <%= auto_discovery_link_tag(:atom, signup_links[:feed_link]) %>
+  <% if signup_links[:feed_link] %>
+    <%= auto_discovery_link_tag(:atom, signup_links[:feed_link]) %>
+  <% end %>
   <%= render 'finder_meta', content_item: content_item %>
 <% end %>
 
