Fix breaking cucumber tests

--- a/app/views/finders/_filter_button.html.erb
+++ b/app/views/finders/_filter_button.html.erb
@@ -6,7 +6,7 @@
     data-track-category="filterClicked"
     data-track-action="mobile-filter-button"
     data-track-label=""
-    data-module="ga4-event-tracker",
+    data-module="ga4-event-tracker"
     data-ga4-expandable=""
     >
       Filter <span class="govuk-visually-hidden"> results</span>
