--- a/app/views/finders/show.html.erb
+++ b/app/views/finders/show.html.erb
@@ -82,7 +82,7 @@
               class="govuk-grid-column-one-half govuk-!-text-align-right subscription-links subscription-links--desktop"
               data-module="ga4-link-tracker"
               data-ga4-track-links-only
-              data-ga4-set-indexes
+              data-ga4-index-group-number="1"
               data-ga4-link='{ "event_name": "navigation", "type": "subscribe", "section": "Top" }'>
               <%= render "govuk_publishing_components/components/subscription_links", signup_links %>
             </div>
@@ -111,7 +111,7 @@
           id="subscription-links-footer"
           data-module="ga4-link-tracker"
           data-ga4-track-links-only
-          data-ga4-set-indexes
+          data-ga4-index-group-number="1"
           data-ga4-link='{ "event_name": "navigation", "type": "subscribe", "section": "Footer" }'>
           <%= render "govuk_publishing_components/components/subscription_links", signup_links %>
         </div>
