--- a/app/views/layouts/finder_layout.html.erb
+++ b/app/views/layouts/finder_layout.html.erb
@@ -24,6 +24,7 @@
       <meta name="robots" content="noindex">
     <% end %>
     <meta name="govuk:base_title" content="<%= yield :meta_title %> - GOV.UK">
+    <meta name="govuk:scroll-tracker" content="" data-module="ga4-scroll-tracker"/>
     <%= yield :meta_tags %>
   </head>
 
