Split data-ga4-section into two attributes so that sections can be set on individual filter inputs
Previously, data-ga4-section was used to set indexes on filter parent elements, as well as give a label to the filter. However, there has been a request for the labels to be more granual. For example, instead of having one label Topics, have a label Topic and Sub-topic on the individual filters, rather than one label on their parent div. To achieve this, data-ga4-section is now used to set the label on each input. data-ga4-filter-parent now exists in order to identify where to calculate the indexes for each filter.

--- a/app/views/components/_date_filter.html.erb
+++ b/app/views/components/_date_filter.html.erb
@@ -19,7 +19,10 @@
         value: from_value,
         controls: aria_controls_id,
         hint: "For example, 2005 or 21/11/2014",
-        error_message: date_errors_from
+        error_message: date_errors_from,
+        data: {
+          ga4_section: name + " after"
+        }
       } %>
 
       <%= render "govuk_publishing_components/components/input", {
@@ -31,7 +34,10 @@
         value: to_value,
         controls: aria_controls_id,
         hint: "For example, 2005 or 21/11/2014",
-        error_message: date_errors_to
+        error_message: date_errors_to,
+        data: {
+          ga4_section: name + " before"
+        }
       } %>
     </div>
   <% end %>
