Rename classes local in option_select partial
This array of CSS classes is actually applied to the options container
within the component and not to the top-level element.

Also govuk_publishing_components components typically allow the CSS
classes on the top-level element to be customised via a `classes` local
variable, so I think the new name is less confusing.

--- a/app/views/components/_option_select.html.erb
+++ b/app/views/components/_option_select.html.erb
@@ -6,8 +6,8 @@
   show_filter ||= false
   large ||= false
 
-  classes = %w[app-c-option-select__container js-options-container]
-  classes << "app-c-option-select__container--large" if large
+  options_container_classes = %w[app-c-option-select__container js-options-container]
+  options_container_classes << "app-c-option-select__container--large" if large
 %>
 
 <% if show_filter %>
@@ -45,7 +45,7 @@
     <svg version="1.1" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" class="app-c-option-select__icon app-c-option-select__icon--down" aria-hidden="true" focusable="false"><path d="m225.84 414.16l256 256c16.683 16.683 43.691 16.683 60.331 0l256-256c16.683-16.683 16.683-43.691 0-60.331s-43.691-16.683-60.331 0l-225.84 225.84-225.84-225.84c-16.683-16.683-43.691-16.683-60.331 0s-16.683 43.691 0 60.331z"/></svg>
   </h3>
 
-  <%= content_tag(:div, role: "group", aria: { labelledby: title_id }, class: classes, id: options_container_id, tabindex: "-1") do %>
+  <%= content_tag(:div, role: "group", aria: { labelledby: title_id }, class: options_container_classes, id: options_container_id, tabindex: "-1") do %>
     <div class="app-c-option-select__container-inner js-auto-height-inner">
       <% if show_filter %>
         <span id="<%= checkboxes_count_id %>"
