--- a/app/views/components/_expander.html.erb
+++ b/app/views/components/_expander.html.erb
@@ -7,11 +7,17 @@
   content_id = "expander-content-#{SecureRandom.hex(4)}"
   shared_helper = GovukPublishingComponents::Presenters::SharedHelper.new(local_assigns)
 
+  helper = GovukPublishingComponents::Presenters::ComponentWrapperHelper.new(local_assigns)
+  helper.add_data_attribute({ module: "expander" })
+
+  helper.add_data_attribute({ "open-on-load": open_on_load })
+  helper.add_data_attribute({ "ga4-section": title })
+
   css_classes = %w( app-c-expander )
   css_classes << (shared_helper.get_margin_bottom) unless margin_bottom == 0
 %>
 <% if title %>
-  <%= tag.div class: css_classes, data: { module: "expander", 'open-on-load': open_on_load, 'ga4-section': title } do %>
+  <%= tag.div(**helper.all_attributes.merge(class: css_classes)) do %>
     <h3 class="app-c-expander__heading">
       <span class="app-c-expander__title js-toggle"><%= title %></span>
       <svg version="1.1" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" class="app-c-expander__icon app-c-expander__icon--up" aria-hidden="true" focusable="false"><path d="m798.16 609.84l-256-256c-16.683-16.683-43.691-16.683-60.331 0l-256 256c-16.683 16.683-16.683 43.691 0 60.331s43.691 16.683 60.331 0l225.84-225.84 225.84 225.84c16.683 16.683 43.691 16.683 60.331 0s16.683-43.691 0-60.331z"/></svg>
