Set expander ga4 data attrs outside component
I did something similar to the option-select component in a previous
commit. This brings the expander component into line with that change.

Setting the GA4-related data attributes outside the component decouples
the component from finder-frontend without losing any of the existing
GA4 tracking.

--- a/app/views/finders/_taxon_facet.html.erb
+++ b/app/views/finders/_taxon_facet.html.erb
@@ -1,6 +1,7 @@
 <% unless i_am_a_topic_page_finder %>
   <%= render "components/expander", {
-    title: "Topic"
+    title: "Topic",
+    data_attributes: { "ga4-section": "Topic" }
   } do %>
     <div class="js-taxonomy-select" data-ga4-change-category="update-filter select">
       <%= render "govuk_publishing_components/components/select", {
