--- a/app/views/components/_date_filter.html.erb
+++ b/app/views/components/_date_filter.html.erb
@@ -6,9 +6,10 @@
   aria_controls_id ||= false
   date_errors_from ||= nil
   date_errors_to ||= nil
+  data_attributes ||= {}
 %>
 <% if key && name %>
-  <%= render "components/expander", { title: name, data_attributes: { "ga4-section": name } } do %>
+  <%= render "components/expander", { title: name, data_attributes: } do %>
     <div class="govuk-!-margin-bottom-0" id="<%= key %>">
       <%= render "govuk_publishing_components/components/input", {
         label: {
