--- a/app/views/finders/_date_facet.html.erb
+++ b/app/views/finders/_date_facet.html.erb
@@ -7,6 +7,7 @@
     to_value: date_facet.user_supplied_to_date,
     aria_controls_id: "js-search-results-info",
     date_errors_to: date_facet.error_message_to(@search_query),
-    date_errors_from: date_facet.error_message_from(@search_query)
+    date_errors_from: date_facet.error_message_from(@search_query),
+    data_attributes:  { "ga4-section": date_facet.name }
   } %>
 </span>
