--- a/app/views/finders/_radio_facet.html.erb
+++ b/app/views/finders/_radio_facet.html.erb
@@ -1,7 +1,7 @@
-<div class="facet-container" data-ga4-change-category="update-filter radio" data-ga4-section="">
+<%= tag.div(class: "facet-container", data: { "ga4-change-category": "update-filter radio", "ga4-section": "" }) do %>
   <%= render "govuk_publishing_components/components/radio", {
     name: radio_facet.key,
     small: true,
     items: radio_facet.options
   } %>
-</div>
+<% end %>
