Extract ga4_section method onto Facet subclasses

--- a/app/views/finders/_option_select_facet.html.erb
+++ b/app/views/finders/_option_select_facet.html.erb
@@ -12,7 +12,7 @@
     :closed_on_load_mobile => option_select_facet.closed_on_load_mobile?,
     :show_filter => option_select_facet.show_option_select_filter,
     :large => option_select_facet.large?,
-    :data_attributes => { "ga4-change-category": "update-filter checkbox", "ga4-section": option_select_facet.name }
+    :data_attributes => { "ga4-change-category": "update-filter checkbox", "ga4-section": option_select_facet.ga4_section }
   }
   %>
 <% end %>
