Set `app-c-expander__heading` margin to 0
After removing the CSS reset, Chrome applied 18.72px to the top and bottom margin, this change here resets the margins back to 0.

--- a/app/assets/stylesheets/components/_expander.scss
+++ b/app/assets/stylesheets/components/_expander.scss
@@ -23,6 +23,7 @@
   .app-c-expander__heading {
     position: relative;
     padding: 10px 8px 5px 43px;
+    margin: 0;
   }
 
   .app-c-expander__content {
