Fix skip to results link accessibility issue

--- a/app/views/finders/_facet_tags.html.erb
+++ b/app/views/finders/_facet_tags.html.erb
@@ -15,7 +15,7 @@
             <span class="facet-tag">
               <span class="facet-tag__text"><%= filter[:text] %></span>
               <button type="button"
-                class="facet-tag__remove"
+                class="facet-tag__remove js-facet-tag__remove"
                 aria-label="Remove filter <%= filter[:text] %>"
                 data-module="remove-filter-link"
                 data-track-label="<%= filter[:data_track_label] %>"
