Move Javascript modules to es6-components
To prevent browsers evaluating JS that isn't supported, components that
contain code from govuk-frontend have been moved to a separate file
`es6-components.js` which is included in `application.html.erb` as a
script tag with `type="module"`.

--- a/app/views/layouts/development_layout.html.erb
+++ b/app/views/layouts/development_layout.html.erb
@@ -15,6 +15,7 @@
     <%=
       render_component_stylesheets
     %>
+    <%= javascript_include_tag 'es6-components', integrity: false, type: "module" %>
     <%= javascript_include_tag "application", integrity: false %>
     <meta name="robots" content="noindex">
   </head>
