--- a/app/views/finders/show_all_content_finder.html.erb
+++ b/app/views/finders/show_all_content_finder.html.erb
@@ -45,8 +45,9 @@
         </div>
 
         <%= render "components/filter_panel", {
-          button_text: "Sort and filter",
+          button_text: "Filter and sort",
           result_count: result_set_presenter.total_count,
+          margin_bottom: 3,
         } do %>
           TODO: Add filter panel content here
         <% end %>
