add sections of filters to panel

--- a/app/views/components/_filter_panel.html.erb
+++ b/app/views/components/_filter_panel.html.erb
@@ -38,6 +38,13 @@
     role: "region",
     aria: { labelledby: button_id },
   ) do %>
-    <%= yield %>
+
+    <%= render "components/filter_section", {
+      status_text: "1 Selected",
+      status_title: "Filter 1",
+      open: true
+    } do %>
+      <p>open section</p>
+    <% end %>
   <% end %>
 <% end %>
