--- a/app/assets/stylesheets/components/_filter-section.scss
+++ b/app/assets/stylesheets/components/_filter-section.scss
@@ -1,66 +1,56 @@
+@import "govuk_publishing_components/individual_component_support";
+
 .app-c-filter-panel__section {
   border-bottom: 1px solid $govuk-border-colour;
-  margin: 20px 0;
+  margin: govuk-spacing(4) 0;
 
   &:last-child {
     border-bottom: 0;
-    margin-bottom: 0;
+    margin-bottom: 0; 
   }
 
   &:first-child {
-    margin-top: 0;
+    margin-top: 0; 
   }
 
-  .govuk-form-group {
-    margin-bottom: 0;
-  }
-
-  .govuk-details {
+  .app-c-filter-panel__section-details {
     margin-bottom: 0;
 
-    &__text {
-      border-left: none;
-      padding-left: 0;
-      padding-top: 5px;
-      padding-bottom: 15px;
-      margin: 0;
-    }
-
-    &[open] .govuk-details__summary::before {
+    &[open] .app-c-filter-panel__section-summary::before {
       border-style: solid;
       border-width: 2px 2px 0 0;
       content: '';
       display: inline-block;
-      height: 10px;
+      height: govuk-spacing(2);
       left: 0;
       position: relative;
       vertical-align: middle;
-      width: 10px;
+      width: govuk-spacing(2);
       border-color: $govuk-text-colour;
       clip-path: unset;
 
       top: 0;
-      transform: rotate(-45deg);
+      transform: translateY(70%) rotate(-45deg);
     }
 
-    .govuk-details__summary::before {
+    .app-c-filter-panel__section-summary::before {
       border-style: solid;
       border-width: 2px 2px 0 0;
       content: '';
       display: inline-block;
-      height: 10px;
+      height: govuk-spacing(2);
       left: 0;
       position: relative;
       vertical-align: middle;
-      width: 10px;
+      width: govuk-spacing(2);
       border-color: $govuk-text-colour;
       clip-path: unset;
 
       top: -5px;
-      transform: rotate(135deg);
+      transform: translateY(70%) rotate(135deg);
     }
 
-    .govuk-details__summary-text {
+    .app-c-filter-panel__section-summary-text {
       display: flex;
       width: 100%; 
       color: $govuk-text-colour;
@@ -69,24 +59,14 @@
     }
   }
 
-  .govuk-details__summary, .govuk-fieldset__legend {
+  .app-c-filter-panel__section-summary {
     display: flex;
     width: 100%;
     padding-left: 0;
-  
-    &-text, .govuk-fieldset__heading {
-      display: flex;
-      width: 100%; 
-    }
-  }
-
-  .govuk-checkboxes__label, .govuk-radios__label {
-    &::before {
-      background-color: govuk-colour('white');
-    }
   }
 }
 
+// need to be relocated/renamed
 .app-c-filter-panel__section-header {
   display: flex;
   width: 100%;
@@ -98,6 +78,6 @@
 }
 
 .app-c-filter-panel__section-count {
-  @include govuk-font(16, $weight: regular);
   text-decoration: none;
+  @include govuk-font(16, $weight: regular);
 }
