Set up search autocomplete
- Use publishing components branch build for search autocomplete
- Link search autocomplete JS in application.js
- Use component on all content finder

--- a/app/views/finders/show_all_content_finder.html.erb
+++ b/app/views/finders/show_all_content_finder.html.erb
@@ -31,12 +31,14 @@
         } %>
 
         <div id="keywords" role="search" aria-label="Sitewide" data-ga4-change-category="update-keyword text">
-          <%= render "govuk_publishing_components/components/search", {
+          <%= render "govuk_publishing_components/components/search_with_autocomplete", {
             id: "finder-keyword-search",
             name: "keywords",
             type: 'search',
             value: result_set_presenter.user_supplied_keywords,
             disable_corrections: true,
+            source: "https://www.gov.uk/api/search.json?suggest=autocomplete",
+            source_key: "suggested_autocomplete"
           } %>
         </div>
 
