--- a/app/views/finders/show_all_content_finder.html.erb
+++ b/app/views/finders/show_all_content_finder.html.erb
@@ -70,7 +70,7 @@
               options: taxon_facet.topics
             } %>
 
-            <div class="js-required govuk-form-group" data-ga4-section="Sub-topic">
+            <div class="js-required govuk-form-group">
               <%= render "govuk_publishing_components/components/select", {
                 id: 'level_two_taxon',
                 label: "Sub-topic",
